--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,17 @@
 export(aggregate.targets)
 export(annotate.targets)
 export(score.targets)
+importFrom(GenomeInfoDb,seqnames)
+importFrom(S4Vectors,"values<-")
+importFrom(S4Vectors,values)
+importFrom(data.table,":=")
+importFrom(data.table,as.data.table)
+importFrom(data.table,data.table)
+importFrom(data.table,setkey)
+importFrom(gUtils,gr.findoverlaps)
+importFrom(gUtils,gr.fix)
+importFrom(gUtils,gr.in)
+importFrom(gUtils,gr.val)
+importFrom(gUtils,gr2dt)
+importFrom(gUtils,seg2gr)
+importFrom(zoo,rollapply)
