--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,setkey)
+importFrom(ffTrack,fftab)
 importFrom(gUtils,gr.findoverlaps)
 importFrom(gUtils,gr.fix)
 importFrom(gUtils,gr.in)
