--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Description: Package for performing Gamma-Poisson regression on somatic mutation
     statistically calibrated fashion.
 Depends:
     R (>= 3.1.0),
-    GenomicRanges (>= 1.18)
+    GenomicRanges (>= 1.18),
+    gUtils
 Imports:
     MASS,
     rtracklayer (>= 1.26),
