Attempt #2 to fix travis

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     gUtils,
     GenomeInfoDb,
     S4Vectors,
-    BiocGenerics
+    BiocGenerics,
+    R6
 Suggests:
     parallel
 License: GPL-2
