--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,28 @@
-## See https://github.com/metacran/r-builder for details.
+# Sample .travis.yml for R projects.
+#
+# See README.md for instructions, or for more configuration options,
+# see the wiki:
+#   https://github.com/craigcitro/r-travis/wiki
 
 language: r
 sudo: required
 
 before_install:
-  - curl -OL https://raw.githubusercontent.com/metacran/r-builder/master/pkg-build.sh
-  - chmod 755 pkg-build.sh
-  - ./pkg-build.sh bootstrap
-  - ./install_bioc.sh
-
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
 install:
-  - ./pkg-build.sh install_deps
+  - ./travis-tool.sh install_bioc_deps
+  - ./travis-tool.sh install_deps
+  - ./travis-tool.sh install_github mskilab/gUtils
+  - ./travis-tool.sh install_github mskilab/ffTrack
 
-script:
-  - ./pkg-build.sh run_tests
+script: ./travis-tool.sh run_tests
 
 after_failure:
-  - ./pkg-build.sh dump_logs
-
-after_success:
-  - Rscript -e 'covr::coveralls()'
+  - ./travis-tool.sh dump_logs
 
 notifications:
   email:
     on_success: change
     on_failure: change
-
-#env:
-#  matrix:
-#    - RVERSION=oldrel
-#    - RVERSION=release
-#    - RVERSION=devel
-
-#language: r
-#sudo: required
-
-#bioc_packages:
-# - GenomicRanges
-
-#env:
-# - "_R_CHECK_FORCE_SUGGESTS_=0"
