--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 S3method("[",Annotate)
 S3method("[",Cov_Arr)
+S3method("[",FishHook)
 S3method(c,Cov)
+S3method(c,Cov_Arr)
 export(Annotated)
 export(Cov)
 export(Cov_Arr)
