documentation update, package installs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 S3method("[",Annotate)
 S3method("[",Cov_Arr)
+S3method("[",FishHook)
 S3method(c,Cov)
+S3method(c,Cov_Arr)
 export(Annotated)
 export(Cov)
 export(Cov_Arr)
@@ -13,6 +15,7 @@ export(annotate.targets)
 export(qq_pval)
 export(score.targets)
 import(GenomicRanges)
+import(R6)
 import(zoo)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(R6,R6Class)
