added some qq_pval() tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     GenomeInfoDb,
     S4Vectors,
     BiocGenerics,
-    R6
+    R6, 
+    plotly
 Suggests:
     parallel,
     testthat
