--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
     plotly
 Suggests:
     parallel,
-    testthat
+    testthat, 
+    BSgenome.Hsapiens.UCSC.hg19
 License: GPL-2
 LazyData: true
 RoxygenNote: 6.0.1.9000
