--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,16 @@ install:
   - ./travis-tool.sh install_github r-lib/testthat
   - ./travis-tool.sh install_github mskilab/gUtils
   - ./travis-tool.sh install_github mskilab/ffTrack
-  
+  - ./travis-tool.sh install_github r-lib/covr
+
 script: ./travis-tool.sh run_tests
 
 after_failure:
   - ./travis-tool.sh dump_logs
 
+after_success:
+  - Rscript -e 'covr::codecov()'
+  
 notifications:
   email:
     on_success: change
