--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: fishhook
-Title: R Package for performing Gamma-Poisson regression on somatic mutation
-    count data
+Title: R Package for performing Gamma-Poisson regression on somatic mutation count data
 Version: 0.1
 Authors@R: c(person(given = "Marcin",
     family = "Imielinski", role = c("aut", "cre"), email = "mai9037@med.cornell.edu"))
 Description: Package for performing Gamma-Poisson regression on somatic mutation
     count data with covariates to identify mutational enrichment or depletion in a
     statistically calibrated fashion.
+biocViews:
 Depends:
     R (>= 3.1.0),
     GenomicRanges (>= 1.18),
