--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: c(person(given = "Marcin",
     family = "Imielinski", role = c("aut", "cre"), email = "mai9037@med.cornell.edu"))
 Description: Package for performing Gamma-Poisson regression on somatic mutation
     count data with covariates to identify mutational enrichment or depletion in a
-    statistically calibrated fashion.
+    statistically-calibrated fashion.
 biocViews:
 Depends:
     R (>= 3.1.0),
