explicitly import ploty

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(qq_pval)
 export(score.targets)
 import(GenomicRanges)
 import(R6)
+import(plotly)
 import(zoo)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(R6,R6Class)
