Cleaned up FishHook print out

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,15 @@
 S3method("[",Cov_Arr)
 S3method("[",FishHook)
 S3method(c,Cov_Arr)
+S3method(dim,FishHook)
+S3method(length,Cov_Arr)
+S3method(length,FishHook)
 export(Cov_Arr)
 export(FishHook)
+export(aggregate.targets)
+export(annotate.targets)
 export(qq_pval)
+export(score.targets)
 import(GenomicRanges)
 import(R6)
 import(plotly)
