msg:fixed testthat tests, more fixes, more docu updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(c,Covariate)
 S3method(dim,FishHook)
 S3method(length,Covariate)
 S3method(length,FishHook)
+S3method(names,Covariate)
+S3method(names,FishHook)
 export(Cov)
 export(Covariate)
 export(Fish)
