--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Depends:
     R (>= 3.1.0),
     GenomicRanges (>= 1.18),
     gUtils, 
-    ffTrack, 
+    ffTrack,
+    plotly,  
     data.table (>= 1.9),
 Imports:
     MASS,
@@ -22,7 +23,6 @@ Imports:
     S4Vectors,
     BiocGenerics,
     R6, 
-    plotly
 Suggests:
     parallel,
     testthat, 
