msg:travis.yml makeover

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,17 @@ importFrom(S4Vectors,values)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
+importFrom(data.table,rbindlist)
 importFrom(data.table,setkey)
+importFrom(gUtils,gr.chr)
+importFrom(gUtils,gr.dice)
+importFrom(gUtils,gr.findoverlaps)
+importFrom(gUtils,gr.fix)
+importFrom(gUtils,gr.stripstrand)
+importFrom(gUtils,gr.sub)
+importFrom(gUtils,gr.tile)
+importFrom(gUtils,grl.unlist)
+importFrom(gUtils,hg_seqlengths)
+importFrom(gUtils,rle.query)
+importFrom(gUtils,seg2gr)
+importFrom(gUtils,si2gr)
