--- a/.travis.yml
+++ b/.travis.yml
@@ -8,19 +8,20 @@ language: r
 cache: packages
 sudo: required
 
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-install:
-  - ./travis-tool.sh install_bioc_deps
-  - ./travis-tool.sh install_deps
-  - ./travis-tool.sh install_github r-lib/testthat
-  - ./travis-tool.sh install_github mskilab/gUtils
-  - ./travis-tool.sh install_github mskilab/ffTrack
-  - ./travis-tool.sh install_github r-lib/covr
 
-script: ./travis-tool.sh run_tests
+before_install:xo
+  - curl -OL https://raw.githubusercontent.com/metacran/r-builder/master/pkg-build.sh
+  - chmod 755 pkg-build.sh
+  - ./pkg-build.sh bootstrap
+  - ./install_bioc.sh
+  
+install:
+  - ./pkg-build.sh install_deps
+  - ./pkg-build.sh install_github r-lib/testthat
+  - ./pkg-build.sh install_github mskilab/gUtils
+  - ./pkg-build.sh install_github r-lib/covr
+
+script: ./pkg-build.sh run_tests
 
 after_failure:
   - ./travis-tool.sh dump_logs
