--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ language: r
 cache: packages
 sudo: required
 
-
-before_install:xo
+before_install: 
   - curl -OL https://raw.githubusercontent.com/metacran/r-builder/master/pkg-build.sh
   - chmod 755 pkg-build.sh
   - ./pkg-build.sh bootstrap
