--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@
 #   https://github.com/craigcitro/r-travis/wiki
 
 language: r
+dist: precise
 cache: packages
-sudo: required
+sudo: false
 
 before_install: 
   - curl -OL https://raw.githubusercontent.com/metacran/r-builder/master/pkg-build.sh
