msg:from precise to trusty

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,16 @@ sudo: false
 before_install: 
   - curl -OL https://raw.githubusercontent.com/metacran/r-builder/master/pkg-build.sh
   - chmod 755 pkg-build.sh
-  
+
+r: bioc-release
+
 r_packages:
     - covr
-    - devtools 
+    - devtools
+    - testthat
 
 
 install:
-  - ./pkg-build.sh install_deps install_bioc_deps
-  - ./pkg-build.sh install_github r-lib/testthat
   - ./pkg-build.sh install_github mskilab/gUtils
   - ./pkg-build.sh install_github r-lib/covr
 
