--- a/.travis.yml
+++ b/.travis.yml
@@ -9,30 +9,30 @@ dist: trusty
 cache: packages
 sudo: false
 
-before_install: 
-  - curl -OL https://raw.githubusercontent.com/metacran/r-builder/master/pkg-build.sh
-  - chmod 755 pkg-build.sh
+r: 3.4.1
 
-r: bioc-release
+before_install:
+    - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+    - chmod 755 ./travis-tool.sh
 
 r_packages:
     - covr
     - devtools
     - testthat
 
-
 install:
-  - ./pkg-build.sh install_github mskilab/gUtils
-  - ./pkg-build.sh install_github r-lib/covr
+  - R -e "devtools::install_github('mskilab/gUtils')"
 
-script: ./pkg-build.sh run_tests
+script:
+  - ./travis-tool.sh run_tests
 
 after_failure:
   - ./travis-tool.sh dump_logs
 
 after_success:
-  - Rscript -e 'covr::codecov()'
-  
+  - travis_wait Rscript -e 'covr::codecov()'
+
+
 notifications:
   email:
     on_success: change
