--- a/.travis.yml
+++ b/.travis.yml
@@ -4,39 +4,29 @@
 # see the wiki:
 #   https://github.com/craigcitro/r-travis/wiki
 
-language: r
-dist: trusty
-cache: packages
-sudo: false
-
-r: 3.4.1
-
-r_packages:
-    - covr
-    - devtools
-    - testthat
-
-bioc_packages:
-    - GenomicRanges
-    - rtracklayer
-
-r_github_packages:
-    - mskilab/gUtils
+language: c
+sudo: required
 
 before_install:
-    - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-    - chmod 755 ./travis-tool.sh
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
+install:
+  - ./travis-tool.sh install_bioc_deps
+  - ./travis-tool.sh install_deps
+  - ./travis-tool.sh install_github r-lib/testthat
+  - ./travis-tool.sh install_github mskilab/gUtils
+  - ./travis-tool.sh install_github mskilab/ffTrack
+  - ./travis-tool.sh install_github r-lib/covr
 
-script:
-  - ./travis-tool.sh run_tests
+script: ./travis-tool.sh run_tests
 
 after_failure:
   - ./travis-tool.sh dump_logs
 
 after_success:
-  - travis_wait Rscript -e 'covr::codecov()'
-
-
+  - Rscript -e 'covr::codecov()'
+  
 notifications:
   email:
     on_success: change
