--- a/.travis.yml
+++ b/.travis.yml
@@ -4,29 +4,38 @@
 # see the wiki:
 #   https://github.com/craigcitro/r-travis/wiki
 
-language: c
-sudo: required
+language: r
+dist: trusty
+cache: packages
+sudo: false
+
+r: 3.4.1
+
+r_packages:
+    - covr
+    - devtools
+    - testthat
+
+bioc_packages:
+    - GenomicRanges    
 
 before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-install:
-  - ./travis-tool.sh install_bioc_deps
-  - ./travis-tool.sh install_deps
-  - ./travis-tool.sh install_github r-lib/testthat
-  - ./travis-tool.sh install_github mskilab/gUtils
-  - ./travis-tool.sh install_github mskilab/ffTrack
-  - ./travis-tool.sh install_github r-lib/covr
+    - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+    - chmod 755 ./travis-tool.sh
 
-script: ./travis-tool.sh run_tests
+install:
+  - R -e "devtools::install_github('mskilab/gUtils')"
+
+script:
+  - ./travis-tool.sh run_tests
 
 after_failure:
   - ./travis-tool.sh dump_logs
 
 after_success:
-  - Rscript -e 'covr::codecov()'
-  
+  - travis_wait Rscript -e 'covr::codecov()'
+
+
 notifications:
   email:
     on_success: change
