msg:updated travis.yml adding r_github_packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,19 +12,19 @@ sudo: false
 r: 3.4.1
 
 r_packages:
-    - covr
-    - devtools
-    - testthat
-
+  - covr
+  - devtools
+  - testthat
+    
 bioc_packages:
-    - GenomicRanges    
+  - GenomicRanges    
+
+r_github_packages:
+  - mskilab/gUtils
 
 before_install:
     - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
     - chmod 755 ./travis-tool.sh
-
-install:
-  - R -e "devtools::install_github('mskilab/gUtils')"
 
 script:
   - ./travis-tool.sh run_tests
