msg:fixed tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,11 @@ export(Cov)
 export(Covariate)
 export(Fish)
 export(FishHook)
+export(aggregate.hypotheses)
+export(annotate.hypotheses)
 export(qqp)
 export(score)
+export(score.hypotheses)
 import(GenomicRanges)
 import(R6)
 import(plotly)
