msg:fixed seqlengths issue and qqp with empty hypotheses metadata

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setkey)
+importFrom(gUtils,dt2gr)
 importFrom(gUtils,gr.chr)
 importFrom(gUtils,gr.dice)
 importFrom(gUtils,gr.findoverlaps)
@@ -40,5 +41,4 @@ importFrom(gUtils,gr.tile)
 importFrom(gUtils,grl.unlist)
 importFrom(gUtils,hg_seqlengths)
 importFrom(gUtils,rle.query)
-importFrom(gUtils,seg2gr)
 importFrom(gUtils,si2gr)
