--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,15 @@ Description: Package for performing Gamma-Poisson regression on somatic mutation
     count data with covariates to identify mutational enrichment or depletion in a
     statistically-calibrated fashion.
 biocViews:
+Remotes:
+  bioc::3.8/GenomeInfoDb,
+  bioc::3.8/BiocGenerics,   
+  bioc::3.8/S4Vectors,
+  bioc::3.8/IRanges,      
+  bioc::3.8/XVector,
+  bioc::3.8/GenomicRanges,
+  bioc::3.8/rtracklayer,
+  bioc::3.8/VariantAnnotation
 Depends:
     R (>= 3.1.0),
     GenomicRanges (>= 1.18),
