--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Depends:
     GenomicRanges (>= 1.18),
     gUtils, 
     plotly,  
-    data.table (>= 1.9),
+    data.table (>= 1.9)
 Imports:
     MASS,
     Matrix,
@@ -21,10 +21,10 @@ Imports:
     GenomeInfoDb,
     S4Vectors,
     BiocGenerics,
-    R6, 
+    R6
 Suggests:
     parallel,
     testthat
 License: GPL-2
 LazyData: true
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 6.1.1
