--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,14 +9,13 @@ Description: Package for performing Gamma-Poisson regression on somatic mutation
 biocViews:
 Remotes:
   github::mskilab/gUtils,  
-  bioc::3.8/GenomeInfoDb,
-  bioc::3.8/BiocGenerics,   
-  bioc::3.8/S4Vectors,
-  bioc::3.8/IRanges,      
-  bioc::3.8/XVector,
-  bioc::3.8/GenomicRanges,
-  bioc::3.8/rtracklayer,
-  bioc::3.8/VariantAnnotation
+  bioc::3.10/GenomeInfoDb   
+  bioc::3.10/S4Vectors,
+  bioc::3.10/IRanges,      
+  bioc::3.10/XVector,
+  bioc::3.10/GenomicRanges,
+  bioc::3.10/rtracklayer,
+  bioc::3.10/VariantAnnotation
 Depends:
     R (>= 3.5.0),
     GenomicRanges (>= 1.18),
