--- a/.travis.yml
+++ b/.travis.yml
@@ -5,26 +5,17 @@
 #   https://github.com/craigcitro/r-travis/wiki
 
 language: r
-dist: trusty
 cache: packages
 sudo: false
 
-r: 3.5.1
-
-r_packages:
-  - covr
-  - devtools
-  - testthat
-    
-bioc_packages:
-  - GenomicRanges    
-
-r_github_packages:
-  - mskilab/gUtils
+r: 3.6.1
+warnings_are_errors: false
+r_check_args: "--no-build-vignettes --no-manual --as-cran --no-examples"
 
 before_install:
     - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
     - chmod 755 ./travis-tool.sh
+    - export R_REMOTES_NO_ERRORS_FROM_WARNINGS=TRUE
 
 script:
   - ./travis-tool.sh run_tests
